// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`@xsai-ext/responses basic > basic 1`] = `"Hello! I'm Qwen3.5, ready to help you with whatever you need. How can I assist you today? 😊"`;

exports[`@xsai-ext/responses basic > basic 2`] = `
[
  {
    "response": {
      "background": false,
      "completed_at": null,
      "created_at": 1777977059,
      "error": null,
      "frequency_penalty": 0,
      "id": "resp_527609",
      "incomplete_details": null,
      "instructions": "You are a helpful assistant.",
      "max_output_tokens": null,
      "max_tool_calls": null,
      "metadata": {},
      "model": "qwen3.5:0.8b",
      "object": "response",
      "output": [],
      "parallel_tool_calls": true,
      "presence_penalty": 0,
      "previous_response_id": null,
      "prompt_cache_key": null,
      "reasoning": null,
      "safety_identifier": null,
      "service_tier": "default",
      "status": "in_progress",
      "store": false,
      "temperature": 1,
      "text": {
        "format": {
          "type": "text",
        },
      },
      "tool_choice": "auto",
      "tools": [],
      "top_logprobs": 0,
      "top_p": 1,
      "truncation": "disabled",
      "usage": null,
    },
    "sequence_number": 0,
    "type": "response.created",
  },
  {
    "response": {
      "background": false,
      "completed_at": null,
      "created_at": 1777977059,
      "error": null,
      "frequency_penalty": 0,
      "id": "resp_527609",
      "incomplete_details": null,
      "instructions": "You are a helpful assistant.",
      "max_output_tokens": null,
      "max_tool_calls": null,
      "metadata": {},
      "model": "qwen3.5:0.8b",
      "object": "response",
      "output": [],
      "parallel_tool_calls": true,
      "presence_penalty": 0,
      "previous_response_id": null,
      "prompt_cache_key": null,
      "reasoning": null,
      "safety_identifier": null,
      "service_tier": "default",
      "status": "in_progress",
      "store": false,
      "temperature": 1,
      "text": {
        "format": {
          "type": "text",
        },
      },
      "tool_choice": "auto",
      "tools": [],
      "top_logprobs": 0,
      "top_p": 1,
      "truncation": "disabled",
      "usage": null,
    },
    "sequence_number": 1,
    "type": "response.in_progress",
  },
  {
    "item": {
      "id": "rs_308712",
      "summary": [],
      "type": "reasoning",
    },
    "output_index": 0,
    "sequence_number": 2,
    "type": "response.output_item.added",
  },
  {
    "delta": "The",
    "item_id": "rs_308712",
    "output_index": 0,
    "sequence_number": 3,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " user",
    "item_id": "rs_308712",
    "output_index": 0,
    "sequence_number": 4,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " is",
    "item_id": "rs_308712",
    "output_index": 0,
    "sequence_number": 5,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " greeting",
    "item_id": "rs_308712",
    "output_index": 0,
    "sequence_number": 6,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " me",
    "item_id": "rs_308712",
    "output_index": 0,
    "sequence_number": 7,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": ".",
    "item_id": "rs_308712",
    "output_index": 0,
    "sequence_number": 8,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " I",
    "item_id": "rs_308712",
    "output_index": 0,
    "sequence_number": 9,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " need",
    "item_id": "rs_308712",
    "output_index": 0,
    "sequence_number": 10,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " to",
    "item_id": "rs_308712",
    "output_index": 0,
    "sequence_number": 11,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " acknowledge",
    "item_id": "rs_308712",
    "output_index": 0,
    "sequence_number": 12,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " them",
    "item_id": "rs_308712",
    "output_index": 0,
    "sequence_number": 13,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " warmly",
    "item_id": "rs_308712",
    "output_index": 0,
    "sequence_number": 14,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " and",
    "item_id": "rs_308712",
    "output_index": 0,
    "sequence_number": 15,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " offer",
    "item_id": "rs_308712",
    "output_index": 0,
    "sequence_number": 16,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " assistance",
    "item_id": "rs_308712",
    "output_index": 0,
    "sequence_number": 17,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": ".",
    "item_id": "rs_308712",
    "output_index": 0,
    "sequence_number": 18,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "item_id": "rs_308712",
    "output_index": 0,
    "sequence_number": 19,
    "summary_index": 0,
    "text": "The user is greeting me. I need to acknowledge them warmly and offer assistance.",
    "type": "response.reasoning_summary_text.done",
  },
  {
    "item": {
      "encrypted_content": "The user is greeting me. I need to acknowledge them warmly and offer assistance.",
      "id": "rs_308712",
      "summary": [
        {
          "text": "The user is greeting me. I need to acknowledge them warmly and offer assistance.",
          "type": "summary_text",
        },
      ],
      "type": "reasoning",
    },
    "output_index": 0,
    "sequence_number": 20,
    "type": "response.output_item.done",
  },
  {
    "item": {
      "content": [],
      "id": "msg_384265",
      "role": "assistant",
      "status": "in_progress",
      "type": "message",
    },
    "output_index": 1,
    "sequence_number": 21,
    "type": "response.output_item.added",
  },
  {
    "content_index": 0,
    "item_id": "msg_384265",
    "output_index": 1,
    "part": {
      "annotations": [],
      "logprobs": [],
      "text": "",
      "type": "output_text",
    },
    "sequence_number": 22,
    "type": "response.content_part.added",
  },
  {
    "content_index": 0,
    "delta": "Hello",
    "item_id": "msg_384265",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 23,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": "!",
    "item_id": "msg_384265",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 24,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " I",
    "item_id": "msg_384265",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 25,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": "'m",
    "item_id": "msg_384265",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 26,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " Q",
    "item_id": "msg_384265",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 27,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": "wen",
    "item_id": "msg_384265",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 28,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": "3",
    "item_id": "msg_384265",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 29,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": ".",
    "item_id": "msg_384265",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 30,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": "5",
    "item_id": "msg_384265",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 31,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": ",",
    "item_id": "msg_384265",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 32,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " ready",
    "item_id": "msg_384265",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 33,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " to",
    "item_id": "msg_384265",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 34,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " help",
    "item_id": "msg_384265",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 35,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " you",
    "item_id": "msg_384265",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 36,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " with",
    "item_id": "msg_384265",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 37,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " whatever",
    "item_id": "msg_384265",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 38,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " you",
    "item_id": "msg_384265",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 39,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " need",
    "item_id": "msg_384265",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 40,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": ".",
    "item_id": "msg_384265",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 41,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " How",
    "item_id": "msg_384265",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 42,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " can",
    "item_id": "msg_384265",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 43,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " I",
    "item_id": "msg_384265",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 44,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " assist",
    "item_id": "msg_384265",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 45,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " you",
    "item_id": "msg_384265",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 46,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " today",
    "item_id": "msg_384265",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 47,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": "?",
    "item_id": "msg_384265",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 48,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " 😊",
    "item_id": "msg_384265",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 49,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "item_id": "msg_384265",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 50,
    "text": "Hello! I'm Qwen3.5, ready to help you with whatever you need. How can I assist you today? 😊",
    "type": "response.output_text.done",
  },
  {
    "content_index": 0,
    "item_id": "msg_384265",
    "output_index": 1,
    "part": {
      "annotations": [],
      "logprobs": [],
      "text": "Hello! I'm Qwen3.5, ready to help you with whatever you need. How can I assist you today? 😊",
      "type": "output_text",
    },
    "sequence_number": 51,
    "type": "response.content_part.done",
  },
  {
    "item": {
      "content": [
        {
          "annotations": [],
          "logprobs": [],
          "text": "Hello! I'm Qwen3.5, ready to help you with whatever you need. How can I assist you today? 😊",
          "type": "output_text",
        },
      ],
      "id": "msg_384265",
      "role": "assistant",
      "status": "completed",
      "type": "message",
    },
    "output_index": 1,
    "sequence_number": 52,
    "type": "response.output_item.done",
  },
  {
    "response": {
      "background": false,
      "completed_at": 1777977059,
      "created_at": 1777977059,
      "error": null,
      "frequency_penalty": 0,
      "id": "resp_527609",
      "incomplete_details": null,
      "instructions": "You are a helpful assistant.",
      "max_output_tokens": null,
      "max_tool_calls": null,
      "metadata": {},
      "model": "qwen3.5:0.8b",
      "object": "response",
      "output": [
        {
          "encrypted_content": "The user is greeting me. I need to acknowledge them warmly and offer assistance.",
          "id": "rs_308712",
          "summary": [
            {
              "text": "The user is greeting me. I need to acknowledge them warmly and offer assistance.",
              "type": "summary_text",
            },
          ],
          "type": "reasoning",
        },
        {
          "content": [
            {
              "annotations": [],
              "logprobs": [],
              "text": "Hello! I'm Qwen3.5, ready to help you with whatever you need. How can I assist you today? 😊",
              "type": "output_text",
            },
          ],
          "id": "msg_384265",
          "role": "assistant",
          "status": "completed",
          "type": "message",
        },
      ],
      "parallel_tool_calls": true,
      "presence_penalty": 0,
      "previous_response_id": null,
      "prompt_cache_key": null,
      "reasoning": null,
      "safety_identifier": null,
      "service_tier": "default",
      "status": "completed",
      "store": false,
      "temperature": 1,
      "text": {
        "format": {
          "type": "text",
        },
      },
      "tool_choice": "auto",
      "tools": [],
      "top_logprobs": 0,
      "top_p": 1,
      "truncation": "disabled",
      "usage": {
        "input_tokens": 23,
        "input_tokens_details": {
          "cached_tokens": 0,
        },
        "output_tokens": 48,
        "output_tokens_details": {
          "reasoning_tokens": 0,
        },
        "total_tokens": 71,
      },
    },
    "sequence_number": 53,
    "type": "response.completed",
  },
]
`;

exports[`@xsai-ext/responses basic > basic 3`] = `
[
  {
    "type": "step.start",
  },
  {
    "outputIndex": 0,
    "type": "reasoning.start",
  },
  {
    "delta": "The",
    "type": "reasoning.delta",
  },
  {
    "delta": " user",
    "type": "reasoning.delta",
  },
  {
    "delta": " is",
    "type": "reasoning.delta",
  },
  {
    "delta": " greeting",
    "type": "reasoning.delta",
  },
  {
    "delta": " me",
    "type": "reasoning.delta",
  },
  {
    "delta": ".",
    "type": "reasoning.delta",
  },
  {
    "delta": " I",
    "type": "reasoning.delta",
  },
  {
    "delta": " need",
    "type": "reasoning.delta",
  },
  {
    "delta": " to",
    "type": "reasoning.delta",
  },
  {
    "delta": " acknowledge",
    "type": "reasoning.delta",
  },
  {
    "delta": " them",
    "type": "reasoning.delta",
  },
  {
    "delta": " warmly",
    "type": "reasoning.delta",
  },
  {
    "delta": " and",
    "type": "reasoning.delta",
  },
  {
    "delta": " offer",
    "type": "reasoning.delta",
  },
  {
    "delta": " assistance",
    "type": "reasoning.delta",
  },
  {
    "delta": ".",
    "type": "reasoning.delta",
  },
  {
    "text": "The user is greeting me. I need to acknowledge them warmly and offer assistance.",
    "type": "reasoning.done",
  },
  {
    "outputIndex": 1,
    "type": "text.start",
  },
  {
    "delta": "Hello",
    "type": "text.delta",
  },
  {
    "delta": "!",
    "type": "text.delta",
  },
  {
    "delta": " I",
    "type": "text.delta",
  },
  {
    "delta": "'m",
    "type": "text.delta",
  },
  {
    "delta": " Q",
    "type": "text.delta",
  },
  {
    "delta": "wen",
    "type": "text.delta",
  },
  {
    "delta": "3",
    "type": "text.delta",
  },
  {
    "delta": ".",
    "type": "text.delta",
  },
  {
    "delta": "5",
    "type": "text.delta",
  },
  {
    "delta": ",",
    "type": "text.delta",
  },
  {
    "delta": " ready",
    "type": "text.delta",
  },
  {
    "delta": " to",
    "type": "text.delta",
  },
  {
    "delta": " help",
    "type": "text.delta",
  },
  {
    "delta": " you",
    "type": "text.delta",
  },
  {
    "delta": " with",
    "type": "text.delta",
  },
  {
    "delta": " whatever",
    "type": "text.delta",
  },
  {
    "delta": " you",
    "type": "text.delta",
  },
  {
    "delta": " need",
    "type": "text.delta",
  },
  {
    "delta": ".",
    "type": "text.delta",
  },
  {
    "delta": " How",
    "type": "text.delta",
  },
  {
    "delta": " can",
    "type": "text.delta",
  },
  {
    "delta": " I",
    "type": "text.delta",
  },
  {
    "delta": " assist",
    "type": "text.delta",
  },
  {
    "delta": " you",
    "type": "text.delta",
  },
  {
    "delta": " today",
    "type": "text.delta",
  },
  {
    "delta": "?",
    "type": "text.delta",
  },
  {
    "delta": " 😊",
    "type": "text.delta",
  },
  {
    "text": "Hello! I'm Qwen3.5, ready to help you with whatever you need. How can I assist you today? 😊",
    "type": "text.done",
  },
  {
    "output": [
      {
        "encrypted_content": "The user is greeting me. I need to acknowledge them warmly and offer assistance.",
        "id": "rs_308712",
        "summary": [
          {
            "text": "The user is greeting me. I need to acknowledge them warmly and offer assistance.",
            "type": "summary_text",
          },
        ],
        "type": "reasoning",
      },
      {
        "content": [
          {
            "annotations": [],
            "logprobs": [],
            "text": "Hello! I'm Qwen3.5, ready to help you with whatever you need. How can I assist you today? 😊",
            "type": "output_text",
          },
        ],
        "id": "msg_384265",
        "role": "assistant",
        "status": "completed",
        "type": "message",
      },
    ],
    "type": "step.done",
    "usage": {
      "input_tokens": 23,
      "input_tokens_details": {
        "cached_tokens": 0,
      },
      "output_tokens": 48,
      "output_tokens_details": {
        "reasoning_tokens": 0,
      },
      "total_tokens": 71,
    },
  },
]
`;

exports[`@xsai-ext/responses basic > basic 4`] = `
{
  "input_tokens": 23,
  "input_tokens_details": {
    "cached_tokens": 0,
  },
  "output_tokens": 48,
  "output_tokens_details": {
    "reasoning_tokens": 0,
  },
  "total_tokens": 71,
}
`;

exports[`@xsai-ext/responses basic > basic 5`] = `
{
  "input_tokens": 23,
  "input_tokens_details": {
    "cached_tokens": 0,
  },
  "output_tokens": 48,
  "output_tokens_details": {
    "reasoning_tokens": 0,
  },
  "total_tokens": 71,
}
`;

exports[`@xsai-ext/responses basic > tool calls 1`] = `
[
  {
    "response": {
      "background": false,
      "completed_at": null,
      "created_at": 1777977059,
      "error": null,
      "frequency_penalty": 0,
      "id": "resp_960382",
      "incomplete_details": null,
      "instructions": "You are a helpful assistant.",
      "max_output_tokens": null,
      "max_tool_calls": null,
      "metadata": {},
      "model": "qwen3.5:0.8b",
      "object": "response",
      "output": [],
      "parallel_tool_calls": true,
      "presence_penalty": 0,
      "previous_response_id": null,
      "prompt_cache_key": null,
      "reasoning": null,
      "safety_identifier": null,
      "service_tier": "default",
      "status": "in_progress",
      "store": false,
      "temperature": 1,
      "text": {
        "format": {
          "type": "text",
        },
      },
      "tool_choice": "auto",
      "tools": [
        {
          "description": "Adds two numbers",
          "name": "add",
          "parameters": {
            "$schema": "http://json-schema.org/draft-07/schema#",
            "additionalProperties": false,
            "properties": {
              "a": {
                "description": "First number",
                "type": "string",
              },
              "b": {
                "description": "Second number",
                "type": "string",
              },
            },
            "required": [
              "a",
              "b",
            ],
            "type": "object",
          },
          "strict": true,
          "type": "function",
        },
      ],
      "top_logprobs": 0,
      "top_p": 1,
      "truncation": "disabled",
      "usage": null,
    },
    "sequence_number": 0,
    "type": "response.created",
  },
  {
    "response": {
      "background": false,
      "completed_at": null,
      "created_at": 1777977059,
      "error": null,
      "frequency_penalty": 0,
      "id": "resp_960382",
      "incomplete_details": null,
      "instructions": "You are a helpful assistant.",
      "max_output_tokens": null,
      "max_tool_calls": null,
      "metadata": {},
      "model": "qwen3.5:0.8b",
      "object": "response",
      "output": [],
      "parallel_tool_calls": true,
      "presence_penalty": 0,
      "previous_response_id": null,
      "prompt_cache_key": null,
      "reasoning": null,
      "safety_identifier": null,
      "service_tier": "default",
      "status": "in_progress",
      "store": false,
      "temperature": 1,
      "text": {
        "format": {
          "type": "text",
        },
      },
      "tool_choice": "auto",
      "tools": [
        {
          "description": "Adds two numbers",
          "name": "add",
          "parameters": {
            "$schema": "http://json-schema.org/draft-07/schema#",
            "additionalProperties": false,
            "properties": {
              "a": {
                "description": "First number",
                "type": "string",
              },
              "b": {
                "description": "Second number",
                "type": "string",
              },
            },
            "required": [
              "a",
              "b",
            ],
            "type": "object",
          },
          "strict": true,
          "type": "function",
        },
      ],
      "top_logprobs": 0,
      "top_p": 1,
      "truncation": "disabled",
      "usage": null,
    },
    "sequence_number": 1,
    "type": "response.in_progress",
  },
  {
    "item": {
      "id": "rs_7439",
      "summary": [],
      "type": "reasoning",
    },
    "output_index": 0,
    "sequence_number": 2,
    "type": "response.output_item.added",
  },
  {
    "delta": "The",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 3,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " user",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 4,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " wants",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 5,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " to",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 6,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " know",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 7,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " how",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 8,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " many",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 9,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " times",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 10,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " 1",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 11,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "1",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 12,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "4",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 13,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "5",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 14,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "1",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 15,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "4",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 16,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " plus",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 17,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " 1",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 18,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "9",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 19,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "1",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 20,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "9",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 21,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "8",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 22,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "1",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 23,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "0",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 24,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " equals",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 25,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " (",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 26,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "this",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 27,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " is",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 28,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " asking",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 29,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " for",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 30,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " the",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 31,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " quotient",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 32,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " or",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 33,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " result",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 34,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " when",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 35,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " these",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 36,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " two",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 37,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " numbers",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 38,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " are",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 39,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " added",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 40,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": ").",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 41,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " Let",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 42,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " me",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 43,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " calculate",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 44,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " this",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 45,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": ":",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 46,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "

1",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 47,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "1",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 48,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "4",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 49,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "5",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 50,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "1",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 51,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "4",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 52,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " +",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 53,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " 1",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 54,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "9",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 55,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "1",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 56,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "9",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 57,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "8",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 58,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "1",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 59,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "0",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 60,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " =",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 61,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " 2",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 62,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "0",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 63,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "3",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 64,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "4",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 65,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "3",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 66,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "2",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 67,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "4",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 68,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "

This",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 69,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " is",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 70,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " a",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 71,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " simple",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 72,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " addition",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 73,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " problem",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 74,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": ",",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 75,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " not",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 76,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " really",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 77,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " asking",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 78,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " to",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 79,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " use",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 80,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " the",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 81,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " add",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 82,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " tool",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 83,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": ".",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 84,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " I",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 85,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " can",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 86,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " calculate",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 87,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " this",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 88,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " directly",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 89,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " and",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 90,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " then",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 91,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " present",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 92,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " the",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 93,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " answer",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 94,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": ".",
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 95,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "item_id": "rs_7439",
    "output_index": 0,
    "sequence_number": 96,
    "summary_index": 0,
    "text": "The user wants to know how many times 114514 plus 1919810 equals (this is asking for the quotient or result when these two numbers are added). Let me calculate this:

114514 + 1919810 = 2034324

This is a simple addition problem, not really asking to use the add tool. I can calculate this directly and then present the answer.",
    "type": "response.reasoning_summary_text.done",
  },
  {
    "item": {
      "encrypted_content": "The user wants to know how many times 114514 plus 1919810 equals (this is asking for the quotient or result when these two numbers are added). Let me calculate this:

114514 + 1919810 = 2034324

This is a simple addition problem, not really asking to use the add tool. I can calculate this directly and then present the answer.",
      "id": "rs_7439",
      "summary": [
        {
          "text": "The user wants to know how many times 114514 plus 1919810 equals (this is asking for the quotient or result when these two numbers are added). Let me calculate this:

114514 + 1919810 = 2034324

This is a simple addition problem, not really asking to use the add tool. I can calculate this directly and then present the answer.",
          "type": "summary_text",
        },
      ],
      "type": "reasoning",
    },
    "output_index": 0,
    "sequence_number": 97,
    "type": "response.output_item.done",
  },
  {
    "item": {
      "arguments": "",
      "call_id": "call_frhor4k5",
      "id": "fc_986713_0",
      "name": "add",
      "status": "in_progress",
      "type": "function_call",
    },
    "output_index": 1,
    "sequence_number": 98,
    "type": "response.output_item.added",
  },
  {
    "delta": "{"a":"114514","b":"1919810"}",
    "item_id": "fc_986713_0",
    "output_index": 1,
    "sequence_number": 99,
    "type": "response.function_call_arguments.delta",
  },
  {
    "arguments": "{"a":"114514","b":"1919810"}",
    "item_id": "fc_986713_0",
    "output_index": 1,
    "sequence_number": 100,
    "type": "response.function_call_arguments.done",
  },
  {
    "item": {
      "arguments": "{"a":"114514","b":"1919810"}",
      "call_id": "call_frhor4k5",
      "id": "fc_986713_0",
      "name": "add",
      "status": "completed",
      "type": "function_call",
    },
    "output_index": 1,
    "sequence_number": 101,
    "type": "response.output_item.done",
  },
  {
    "response": {
      "background": false,
      "completed_at": 1777977060,
      "created_at": 1777977060,
      "error": null,
      "frequency_penalty": 0,
      "id": "resp_960382",
      "incomplete_details": null,
      "instructions": "You are a helpful assistant.",
      "max_output_tokens": null,
      "max_tool_calls": null,
      "metadata": {},
      "model": "qwen3.5:0.8b",
      "object": "response",
      "output": [
        {
          "encrypted_content": "The user wants to know how many times 114514 plus 1919810 equals (this is asking for the quotient or result when these two numbers are added). Let me calculate this:

114514 + 1919810 = 2034324

This is a simple addition problem, not really asking to use the add tool. I can calculate this directly and then present the answer.",
          "id": "rs_7439",
          "summary": [
            {
              "text": "The user wants to know how many times 114514 plus 1919810 equals (this is asking for the quotient or result when these two numbers are added). Let me calculate this:

114514 + 1919810 = 2034324

This is a simple addition problem, not really asking to use the add tool. I can calculate this directly and then present the answer.",
              "type": "summary_text",
            },
          ],
          "type": "reasoning",
        },
        {
          "arguments": "{"a":"114514","b":"1919810"}",
          "call_id": "call_frhor4k5",
          "id": "fc_986713_0",
          "name": "add",
          "status": "completed",
          "type": "function_call",
        },
      ],
      "parallel_tool_calls": true,
      "presence_penalty": 0,
      "previous_response_id": null,
      "prompt_cache_key": null,
      "reasoning": null,
      "safety_identifier": null,
      "service_tier": "default",
      "status": "completed",
      "store": false,
      "temperature": 1,
      "text": {
        "format": {
          "type": "text",
        },
      },
      "tool_choice": "auto",
      "tools": [
        {
          "description": "Adds two numbers",
          "name": "add",
          "parameters": {
            "$schema": "http://json-schema.org/draft-07/schema#",
            "additionalProperties": false,
            "properties": {
              "a": {
                "description": "First number",
                "type": "string",
              },
              "b": {
                "description": "Second number",
                "type": "string",
              },
            },
            "required": [
              "a",
              "b",
            ],
            "type": "object",
          },
          "strict": true,
          "type": "function",
        },
      ],
      "top_logprobs": 0,
      "top_p": 1,
      "truncation": "disabled",
      "usage": {
        "input_tokens": 333,
        "input_tokens_details": {
          "cached_tokens": 0,
        },
        "output_tokens": 148,
        "output_tokens_details": {
          "reasoning_tokens": 0,
        },
        "total_tokens": 481,
      },
    },
    "sequence_number": 102,
    "type": "response.completed",
  },
]
`;

exports[`@xsai-ext/responses basic > tool calls 2`] = `
[
  {
    "type": "step.start",
  },
  {
    "outputIndex": 0,
    "type": "reasoning.start",
  },
  {
    "delta": "The",
    "type": "reasoning.delta",
  },
  {
    "delta": " user",
    "type": "reasoning.delta",
  },
  {
    "delta": " wants",
    "type": "reasoning.delta",
  },
  {
    "delta": " to",
    "type": "reasoning.delta",
  },
  {
    "delta": " know",
    "type": "reasoning.delta",
  },
  {
    "delta": " how",
    "type": "reasoning.delta",
  },
  {
    "delta": " many",
    "type": "reasoning.delta",
  },
  {
    "delta": " times",
    "type": "reasoning.delta",
  },
  {
    "delta": " 1",
    "type": "reasoning.delta",
  },
  {
    "delta": "1",
    "type": "reasoning.delta",
  },
  {
    "delta": "4",
    "type": "reasoning.delta",
  },
  {
    "delta": "5",
    "type": "reasoning.delta",
  },
  {
    "delta": "1",
    "type": "reasoning.delta",
  },
  {
    "delta": "4",
    "type": "reasoning.delta",
  },
  {
    "delta": " plus",
    "type": "reasoning.delta",
  },
  {
    "delta": " 1",
    "type": "reasoning.delta",
  },
  {
    "delta": "9",
    "type": "reasoning.delta",
  },
  {
    "delta": "1",
    "type": "reasoning.delta",
  },
  {
    "delta": "9",
    "type": "reasoning.delta",
  },
  {
    "delta": "8",
    "type": "reasoning.delta",
  },
  {
    "delta": "1",
    "type": "reasoning.delta",
  },
  {
    "delta": "0",
    "type": "reasoning.delta",
  },
  {
    "delta": " equals",
    "type": "reasoning.delta",
  },
  {
    "delta": " (",
    "type": "reasoning.delta",
  },
  {
    "delta": "this",
    "type": "reasoning.delta",
  },
  {
    "delta": " is",
    "type": "reasoning.delta",
  },
  {
    "delta": " asking",
    "type": "reasoning.delta",
  },
  {
    "delta": " for",
    "type": "reasoning.delta",
  },
  {
    "delta": " the",
    "type": "reasoning.delta",
  },
  {
    "delta": " quotient",
    "type": "reasoning.delta",
  },
  {
    "delta": " or",
    "type": "reasoning.delta",
  },
  {
    "delta": " result",
    "type": "reasoning.delta",
  },
  {
    "delta": " when",
    "type": "reasoning.delta",
  },
  {
    "delta": " these",
    "type": "reasoning.delta",
  },
  {
    "delta": " two",
    "type": "reasoning.delta",
  },
  {
    "delta": " numbers",
    "type": "reasoning.delta",
  },
  {
    "delta": " are",
    "type": "reasoning.delta",
  },
  {
    "delta": " added",
    "type": "reasoning.delta",
  },
  {
    "delta": ").",
    "type": "reasoning.delta",
  },
  {
    "delta": " Let",
    "type": "reasoning.delta",
  },
  {
    "delta": " me",
    "type": "reasoning.delta",
  },
  {
    "delta": " calculate",
    "type": "reasoning.delta",
  },
  {
    "delta": " this",
    "type": "reasoning.delta",
  },
  {
    "delta": ":",
    "type": "reasoning.delta",
  },
  {
    "delta": "

1",
    "type": "reasoning.delta",
  },
  {
    "delta": "1",
    "type": "reasoning.delta",
  },
  {
    "delta": "4",
    "type": "reasoning.delta",
  },
  {
    "delta": "5",
    "type": "reasoning.delta",
  },
  {
    "delta": "1",
    "type": "reasoning.delta",
  },
  {
    "delta": "4",
    "type": "reasoning.delta",
  },
  {
    "delta": " +",
    "type": "reasoning.delta",
  },
  {
    "delta": " 1",
    "type": "reasoning.delta",
  },
  {
    "delta": "9",
    "type": "reasoning.delta",
  },
  {
    "delta": "1",
    "type": "reasoning.delta",
  },
  {
    "delta": "9",
    "type": "reasoning.delta",
  },
  {
    "delta": "8",
    "type": "reasoning.delta",
  },
  {
    "delta": "1",
    "type": "reasoning.delta",
  },
  {
    "delta": "0",
    "type": "reasoning.delta",
  },
  {
    "delta": " =",
    "type": "reasoning.delta",
  },
  {
    "delta": " 2",
    "type": "reasoning.delta",
  },
  {
    "delta": "0",
    "type": "reasoning.delta",
  },
  {
    "delta": "3",
    "type": "reasoning.delta",
  },
  {
    "delta": "4",
    "type": "reasoning.delta",
  },
  {
    "delta": "3",
    "type": "reasoning.delta",
  },
  {
    "delta": "2",
    "type": "reasoning.delta",
  },
  {
    "delta": "4",
    "type": "reasoning.delta",
  },
  {
    "delta": "

This",
    "type": "reasoning.delta",
  },
  {
    "delta": " is",
    "type": "reasoning.delta",
  },
  {
    "delta": " a",
    "type": "reasoning.delta",
  },
  {
    "delta": " simple",
    "type": "reasoning.delta",
  },
  {
    "delta": " addition",
    "type": "reasoning.delta",
  },
  {
    "delta": " problem",
    "type": "reasoning.delta",
  },
  {
    "delta": ",",
    "type": "reasoning.delta",
  },
  {
    "delta": " not",
    "type": "reasoning.delta",
  },
  {
    "delta": " really",
    "type": "reasoning.delta",
  },
  {
    "delta": " asking",
    "type": "reasoning.delta",
  },
  {
    "delta": " to",
    "type": "reasoning.delta",
  },
  {
    "delta": " use",
    "type": "reasoning.delta",
  },
  {
    "delta": " the",
    "type": "reasoning.delta",
  },
  {
    "delta": " add",
    "type": "reasoning.delta",
  },
  {
    "delta": " tool",
    "type": "reasoning.delta",
  },
  {
    "delta": ".",
    "type": "reasoning.delta",
  },
  {
    "delta": " I",
    "type": "reasoning.delta",
  },
  {
    "delta": " can",
    "type": "reasoning.delta",
  },
  {
    "delta": " calculate",
    "type": "reasoning.delta",
  },
  {
    "delta": " this",
    "type": "reasoning.delta",
  },
  {
    "delta": " directly",
    "type": "reasoning.delta",
  },
  {
    "delta": " and",
    "type": "reasoning.delta",
  },
  {
    "delta": " then",
    "type": "reasoning.delta",
  },
  {
    "delta": " present",
    "type": "reasoning.delta",
  },
  {
    "delta": " the",
    "type": "reasoning.delta",
  },
  {
    "delta": " answer",
    "type": "reasoning.delta",
  },
  {
    "delta": ".",
    "type": "reasoning.delta",
  },
  {
    "text": "The user wants to know how many times 114514 plus 1919810 equals (this is asking for the quotient or result when these two numbers are added). Let me calculate this:

114514 + 1919810 = 2034324

This is a simple addition problem, not really asking to use the add tool. I can calculate this directly and then present the answer.",
    "type": "reasoning.done",
  },
  {
    "outputIndex": 1,
    "type": "tool-call.start",
  },
  {
    "delta": "{"a":"114514","b":"1919810"}",
    "type": "tool-call.delta",
  },
  {
    "toolCall": {
      "arguments": "{"a":"114514","b":"1919810"}",
      "id": "call_frhor4k5",
      "name": "add",
    },
    "type": "tool-call.done",
  },
  {
    "toolResult": {
      "id": "call_frhor4k5",
      "input": {
        "a": "114514",
        "b": "1919810",
      },
      "name": "add",
      "output": "2034324",
    },
    "type": "tool-result.done",
  },
  {
    "output": [
      {
        "encrypted_content": "The user wants to know how many times 114514 plus 1919810 equals (this is asking for the quotient or result when these two numbers are added). Let me calculate this:

114514 + 1919810 = 2034324

This is a simple addition problem, not really asking to use the add tool. I can calculate this directly and then present the answer.",
        "id": "rs_7439",
        "summary": [
          {
            "text": "The user wants to know how many times 114514 plus 1919810 equals (this is asking for the quotient or result when these two numbers are added). Let me calculate this:

114514 + 1919810 = 2034324

This is a simple addition problem, not really asking to use the add tool. I can calculate this directly and then present the answer.",
            "type": "summary_text",
          },
        ],
        "type": "reasoning",
      },
      {
        "arguments": "{"a":"114514","b":"1919810"}",
        "call_id": "call_frhor4k5",
        "id": "fc_986713_0",
        "name": "add",
        "status": "completed",
        "type": "function_call",
      },
    ],
    "type": "step.done",
    "usage": {
      "input_tokens": 333,
      "input_tokens_details": {
        "cached_tokens": 0,
      },
      "output_tokens": 148,
      "output_tokens_details": {
        "reasoning_tokens": 0,
      },
      "total_tokens": 481,
    },
  },
]
`;

exports[`@xsai-ext/responses basic > tool calls 3`] = `
{
  "input_tokens": 333,
  "input_tokens_details": {
    "cached_tokens": 0,
  },
  "output_tokens": 148,
  "output_tokens_details": {
    "reasoning_tokens": 0,
  },
  "total_tokens": 481,
}
`;

exports[`@xsai-ext/responses basic > tool calls 4`] = `
{
  "input_tokens": 333,
  "input_tokens_details": {
    "cached_tokens": 0,
  },
  "output_tokens": 148,
  "output_tokens_details": {
    "reasoning_tokens": 0,
  },
  "total_tokens": 481,
}
`;
